--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -241,19 +241,56 @@
                     android:text="Robert Downey Jr."
                     android:textStyle="bold"
                     android:textColor="#FFFFFF"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView7"
-                    android:paddingLeft="16dp"
 
+                    android:singleLine="false"
                     app:layout_constraintTop_toBottomOf="@+id/imageView10"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="12dp"
-                    android:layout_marginEnd="23dp"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView10" />
+                    android:layout_marginStart="16dp"
+                   />
 
+            <TextView
+                    android:text="Chris Evans"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF"
+                    android:layout_width="96dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView8"
+
+                    android:singleLine="false"
+                    app:layout_constraintStart_toEndOf="@+id/textView7"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView11"
+                    android:layout_marginTop="12dp"
+                    android:paddingLeft="16dp" />
+
+            <TextView
+                    android:text="Mark Ruffalo"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF"
+                    android:layout_width="96dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView9"
+                    android:paddingLeft="16dp"
+                    android:singleLine="false"
+                    app:layout_constraintStart_toEndOf="@+id/textView8"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+
+            <TextView
+                    android:text="Chris Hemsworth"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF"
+                    android:layout_width="96dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView10"
+                    android:paddingLeft="16dp"
+                    android:singleLine="false"
+                    app:layout_constraintStart_toEndOf="@+id/textView9"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView13" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
