--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -10,13 +10,11 @@
 
     <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-         >
+            android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".MovieDetailsActivity">
+                android:layout_height="match_parent">
 
             <ImageView
                     android:scaleType="centerCrop"
@@ -28,33 +26,30 @@
 
 
             <TextView
+                    android:layout_marginLeft="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="367dp"
-                    android:layout_marginLeft="22dp"
                     android:layout_marginTop="59dp"
-                    android:textStyle="bold"
                     android:text="&lt;"
                     android:textSize="16dp"
                     android:textColor="#6D6D80"
                     app:layout_constraintTop_toTopOf="parent"
 
-                    />
+                    android:id="@+id/textView12"
+                    app:layout_constraintStart_toStartOf="parent" />
 
 
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="335dp"
-                    android:layout_marginLeft="36dp"
+                    android:layout_marginLeft="32dp"
                     android:layout_marginTop="59dp"
-                    android:textStyle="bold"
                     android:text="Back"
                     android:textSize="16dp"
                     android:textColor="#6D6D80"
                     app:layout_constraintTop_toTopOf="parent"
 
-                    />
+                    app:layout_constraintStart_toEndOf="@+id/textView12" />
 
             <TextView
                     android:layout_width="wrap_content"
@@ -197,100 +192,156 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView5"
                     tools:layout_editor_absoluteX="16dp" />
 
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/movie"
-                    android:id="@+id/imageView10"
-                    android:layout_marginTop="20dp"
-                    android:paddingLeft="16dp"
+
+            <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView6"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    android:paddingBottom="25dp">
 
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/movie2"
-                    android:id="@+id/imageView11"
-                    android:layout_marginTop="20dp"
-                    android:paddingLeft="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6"
-                    app:layout_constraintStart_toEndOf="@+id/imageView10" />
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/movie3"
-                    android:id="@+id/imageView12"
-                    android:layout_marginTop="20dp"
-                    android:paddingLeft="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6"
-                    app:layout_constraintStart_toEndOf="@+id/imageView11" />
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
 
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/movie4"
-                    android:id="@+id/imageView13"
-                    android:layout_marginTop="20dp"
-                    android:paddingLeft="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6"
-                    app:layout_constraintStart_toEndOf="@+id/imageView12" />
+                            >
 
-            <TextView
-                    android:text="Robert Downey Jr."
-                    android:textStyle="bold"
-                    android:textColor="#FFFFFF"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView7"
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/movie"
+                                android:id="@+id/imageView10"
+                                android:layout_marginTop="20dp"
+                                android:paddingLeft="16dp"
+                                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                                app:layout_constraintStart_toStartOf="parent" />
 
-                    android:singleLine="false"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView10"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginStart="16dp"
-                   />
+                        <TextView
+                                android:text="Robert Downey Jr."
+                                android:textStyle="bold"
+                                android:textColor="#FFFFFF"
+                                android:layout_width="80dp"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/textView7"
+                                android:paddingTop="4dp"
+                                android:singleLine="false"
+                                app:layout_constraintTop_toBottomOf="@+id/imageView10"
+                                app:layout_constraintStart_toStartOf="parent"
+                                android:layout_marginStart="16dp" />
+                    </LinearLayout>
 
-            <TextView
-                    android:text="Chris Evans"
-                    android:textStyle="bold"
-                    android:textColor="#FFFFFF"
-                    android:layout_width="96dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView8"
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
 
-                    android:singleLine="false"
-                    app:layout_constraintStart_toEndOf="@+id/textView7"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView11"
-                    android:layout_marginTop="12dp"
-                    android:paddingLeft="16dp" />
+                            >
 
-            <TextView
-                    android:text="Mark Ruffalo"
-                    android:textStyle="bold"
-                    android:textColor="#FFFFFF"
-                    android:layout_width="96dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView9"
-                    android:paddingLeft="16dp"
-                    android:singleLine="false"
-                    app:layout_constraintStart_toEndOf="@+id/textView8"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/movie2"
+                                android:id="@+id/imageView11"
+                                android:layout_marginTop="20dp"
+                                android:paddingLeft="16dp"
+                                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                                app:layout_constraintStart_toEndOf="@+id/imageView10" />
 
-            <TextView
-                    android:text="Chris Hemsworth"
-                    android:textStyle="bold"
-                    android:textColor="#FFFFFF"
-                    android:layout_width="96dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView10"
-                    android:paddingLeft="16dp"
-                    android:singleLine="false"
-                    app:layout_constraintStart_toEndOf="@+id/textView9"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView13" />
+
+                        <TextView
+                                android:text="Chris Evans"
+                                android:textStyle="bold"
+                                android:textColor="#FFFFFF"
+                                android:layout_width="96dp"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/textView8"
+                                android:paddingTop="4dp"
+
+                                android:singleLine="false"
+                                app:layout_constraintStart_toEndOf="@+id/textView7"
+                                app:layout_constraintTop_toBottomOf="@+id/imageView11"
+                                android:paddingLeft="16dp" />
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+
+                            >
+
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/movie3"
+                                android:id="@+id/imageView12"
+                                android:layout_marginTop="20dp"
+                                android:paddingLeft="16dp"
+                                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                                app:layout_constraintStart_toEndOf="@+id/imageView11" />
+
+
+                        <TextView
+                                android:text="Mark Ruffalo"
+                                android:textStyle="bold"
+                                android:textColor="#FFFFFF"
+                                android:layout_width="96dp"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/textView9"
+                                android:paddingLeft="16dp"
+                                android:paddingTop="4dp"
+
+                                android:singleLine="false"
+                                app:layout_constraintStart_toEndOf="@+id/textView8"
+                                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+
+                            >
+
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/movie4"
+                                android:id="@+id/imageView13"
+                                android:layout_marginTop="20dp"
+                                android:paddingLeft="16dp"
+                                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                                app:layout_constraintStart_toEndOf="@+id/imageView12" />
+
+
+                        <TextView
+                                android:text="Chris Hemsworth"
+                                android:textStyle="bold"
+                                android:textColor="#FFFFFF"
+                                android:layout_width="96dp"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/textView10"
+                                android:paddingLeft="16dp"
+                                android:singleLine="false"
+                                android:paddingTop="4dp"
+
+                                android:layout_marginRight="16dp"
+                                app:layout_constraintStart_toEndOf="@+id/textView9"
+                                app:layout_constraintTop_toBottomOf="@+id/imageView13" />
+                    </LinearLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-</ScrollView>
+</LinearLayout>
