--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,10 +7,10 @@
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_40dp">40dp</dimen>
     <dimen name="_14dp">14dp</dimen>
-    <dimen name="_4dp">4</dimen>
-    <dimen name="_20dp">20</dimen>
-    <dimen name="_10dp">10</dimen>
-    <dimen name="_80dp">80</dimen>
-    <dimen name="_96dp">96</dimen>
-    <dimen name="_30dp">30</dimen>
+    <dimen name="_4dp">4dp</dimen>
+    <dimen name="_20dp">20dp</dimen>
+    <dimen name="_10dp">10dp</dimen>
+    <dimen name="_80dp">80dp</dimen>
+    <dimen name="_96dp">96dp</dimen>
+    <dimen name="_30dp">30dp</dimen>
 </resources>
