--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -23,20 +23,30 @@
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/orig"
                     android:id="@+id/imageView"
-                    app:layout_constraintTop_toTopOf="parent"
-                   />
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                    android:layout_marginLeft="@dimen/_16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_59dp"
-                    android:text="&lt;"
-                    android:textSize="@dimen/_16dp"
-                    android:textColor="@color/_6D6D80"
+            <ImageView
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="@dimen/_62dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:id="@+id/textView12"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginLeft="@dimen/_16dp"
+                    app:srcCompat="@drawable/path"
+                    android:id="@+id/imageView4" />
+
+            <!--  <TextView
+                      android:layout_marginLeft="@dimen/_16dp"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="@dimen/_59dp"
+
+                      android:text="&lt;"
+                      android:textSize="@dimen/_16dp"
+                      android:textColor="@color/_6D6D80"
+                      app:layout_constraintTop_toTopOf="parent"
+                      android:id="@+id/textView12"
+                      app:layout_constraintStart_toStartOf="parent" />-->
 
 
             <TextView
@@ -49,7 +59,7 @@
                     android:textColor="@color/_6D6D80"
                     app:layout_constraintTop_toTopOf="parent"
 
-                    app:layout_constraintStart_toEndOf="@+id/textView12" />
+                    app:layout_constraintStart_toEndOf="@+id/imageView4" />
 
             <TextView
                     android:layout_width="wrap_content"
@@ -93,7 +103,7 @@
 
                     android:textColor="@color/_6D6D80"
                     android:textSize="@dimen/_14dp"
-                    android:textAllCaps ="true"
+                    android:textAllCaps="true"
                     android:text="@string/_125_reviews"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -179,8 +189,7 @@
                     android:layout_marginLeft="@dimen/_16dp"
                     android:paddingRight="@dimen/_16dp"
                     app:layout_constraintTop_toBottomOf="@+id/textView4"
-                    app:layout_constraintStart_toStartOf="parent"
-                    />
+                    app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                     android:text="@string/cast"
@@ -196,111 +205,107 @@
                     app:layout_constraintStart_toStartOf="parent" />
 
 
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/movie"
+                    android:id="@+id/imageView10"
+                    android:layout_marginTop="@dimen/_20dp"
+                    android:paddingLeft="@dimen/_16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView6"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                    android:text="@string/robert_downey_jr"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:layout_width="@dimen/_80dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView7"
+                    android:paddingTop="@dimen/_4dp"
+                    android:singleLine="false"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView10"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="@dimen/_16dp" />
 
 
-                        <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:srcCompat="@drawable/movie"
-                                android:id="@+id/imageView10"
-                                android:layout_marginTop="@dimen/_20dp"
-                                android:paddingLeft="@dimen/_16dp"
-                                app:layout_constraintTop_toBottomOf="@+id/textView6"
-                                app:layout_constraintStart_toStartOf="parent" />
-
-                        <TextView
-                                android:text="@string/robert_downey_jr"
-                                android:textStyle="bold"
-                                android:textColor="@color/white"
-                                android:layout_width="@dimen/_80dp"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/textView7"
-                                android:paddingTop="@dimen/_4dp"
-                                android:singleLine="false"
-                                app:layout_constraintTop_toBottomOf="@+id/imageView10"
-                                app:layout_constraintStart_toStartOf="parent"
-                                android:layout_marginStart="@dimen/_16dp" />
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/movie2"
+                    android:id="@+id/imageView11"
+                    android:layout_marginTop="@dimen/_20dp"
+                    android:paddingLeft="@dimen/_16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView6"
+                    app:layout_constraintStart_toEndOf="@+id/imageView10" />
 
 
-                        <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:srcCompat="@drawable/movie2"
-                                android:id="@+id/imageView11"
-                                android:layout_marginTop="@dimen/_20dp"
-                                android:paddingLeft="@dimen/_16dp"
-                                app:layout_constraintTop_toBottomOf="@+id/textView6"
-                                app:layout_constraintStart_toEndOf="@+id/imageView10" />
+            <TextView
+                    android:text="@string/chris_evans"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:layout_width="@dimen/_96dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView8"
+                    android:paddingTop="@dimen/_4dp"
+
+                    android:singleLine="false"
+                    app:layout_constraintStart_toEndOf="@+id/textView7"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView11"
+                    android:paddingLeft="@dimen/_16dp" />
 
 
-                        <TextView
-                                android:text="@string/chris_evans"
-                                android:textStyle="bold"
-                                android:textColor="@color/white"
-                                android:layout_width="@dimen/_96dp"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/textView8"
-                                android:paddingTop="@dimen/_4dp"
-
-                                android:singleLine="false"
-                                app:layout_constraintStart_toEndOf="@+id/textView7"
-                                app:layout_constraintTop_toBottomOf="@+id/imageView11"
-                                android:paddingLeft="@dimen/_16dp" />
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/movie3"
+                    android:id="@+id/imageView12"
+                    android:layout_marginTop="@dimen/_20dp"
+                    android:paddingLeft="@dimen/_16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView6"
+                    app:layout_constraintStart_toEndOf="@+id/imageView11" />
 
 
+            <TextView
+                    android:text="@string/mark_ruffalo"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:layout_width="@dimen/_96dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView9"
+                    android:paddingLeft="@dimen/_16dp"
+                    android:paddingTop="@dimen/_4dp"
 
-                        <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:srcCompat="@drawable/movie3"
-                                android:id="@+id/imageView12"
-                                android:layout_marginTop="@dimen/_20dp"
-                                android:paddingLeft="@dimen/_16dp"
-                                app:layout_constraintTop_toBottomOf="@+id/textView6"
-                                app:layout_constraintStart_toEndOf="@+id/imageView11" />
-
-
-                        <TextView
-                                android:text="@string/mark_ruffalo"
-                                android:textStyle="bold"
-                                android:textColor="@color/white"
-                                android:layout_width="@dimen/_96dp"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/textView9"
-                                android:paddingLeft="@dimen/_16dp"
-                                android:paddingTop="@dimen/_4dp"
-
-                                android:singleLine="false"
-                                app:layout_constraintStart_toEndOf="@+id/textView8"
-                                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+                    android:singleLine="false"
+                    app:layout_constraintStart_toEndOf="@+id/textView8"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
 
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/movie4"
+                    android:id="@+id/imageView13"
+                    android:layout_marginTop="@dimen/_20dp"
+                    android:paddingLeft="@dimen/_16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView6"
+                    app:layout_constraintStart_toEndOf="@+id/imageView12" />
 
-                        <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:srcCompat="@drawable/movie4"
-                                android:id="@+id/imageView13"
-                                android:layout_marginTop="@dimen/_20dp"
-                                android:paddingLeft="@dimen/_16dp"
-                                app:layout_constraintTop_toBottomOf="@+id/textView6"
-                                app:layout_constraintStart_toEndOf="@+id/imageView12" />
 
-
-                        <TextView
-                                android:text="@string/chris_hemsworth"
-                                android:textStyle="bold"
-                                android:textColor="@color/white"
-                                android:layout_width="@dimen/_96dp"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/textView10"
-                                android:paddingLeft="@dimen/_16dp"
-                                android:singleLine="false"
-                                android:paddingTop="@dimen/_4dp"
-                                android:paddingBottom="@dimen/_30dp"
-                                android:layout_marginRight="@dimen/_16dp"
-                                app:layout_constraintStart_toEndOf="@+id/textView9"
-                                app:layout_constraintTop_toBottomOf="@+id/imageView13" />
+            <TextView
+                    android:text="@string/chris_hemsworth"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:layout_width="@dimen/_96dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView10"
+                    android:paddingLeft="@dimen/_16dp"
+                    android:singleLine="false"
+                    android:paddingTop="@dimen/_4dp"
+                    android:paddingBottom="@dimen/_30dp"
+                    android:layout_marginRight="@dimen/_16dp"
+                    app:layout_constraintStart_toEndOf="@+id/textView9"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView13" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
