--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -207,8 +207,8 @@
 
 
             <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_170dp"
+                    android:layout_height="@dimen/_170dp"
                     app:srcCompat="@drawable/movie"
                     android:id="@+id/imageView10"
                     android:layout_marginTop="@dimen/_20dp"
@@ -220,7 +220,7 @@
                     android:text="@string/robert_downey_jr"
                     android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:layout_width="@dimen/_80dp"
+                    android:layout_width="154dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView7"
                     android:paddingTop="@dimen/_4dp"
@@ -231,8 +231,8 @@
 
 
             <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_170dp"
+                    android:layout_height="@dimen/_170dp"
                     app:srcCompat="@drawable/movie2"
                     android:id="@+id/imageView11"
                     android:layout_marginTop="@dimen/_20dp"
@@ -245,7 +245,7 @@
                     android:text="@string/chris_evans"
                     android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:layout_width="@dimen/_96dp"
+                    android:layout_width="@dimen/_170dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView8"
                     android:paddingTop="@dimen/_4dp"
@@ -257,8 +257,8 @@
 
 
             <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_170dp"
+                    android:layout_height="@dimen/_170dp"
                     app:srcCompat="@drawable/movie3"
                     android:id="@+id/imageView12"
                     android:layout_marginTop="@dimen/_20dp"
@@ -271,7 +271,7 @@
                     android:text="@string/mark_ruffalo"
                     android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:layout_width="@dimen/_96dp"
+                    android:layout_width="@dimen/_170dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView9"
                     android:paddingLeft="@dimen/_16dp"
@@ -283,8 +283,8 @@
 
 
             <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_170dp"
+                    android:layout_height="@dimen/_170dp"
                     app:srcCompat="@drawable/movie4"
                     android:id="@+id/imageView13"
                     android:layout_marginTop="@dimen/_20dp"
@@ -297,7 +297,7 @@
                     android:text="@string/chris_hemsworth"
                     android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:layout_width="@dimen/_96dp"
+                    android:layout_width="@dimen/_170dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView10"
                     android:paddingLeft="@dimen/_16dp"
