fix layout activity_movie

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="_16dp">16dp</dimen>
-    <dimen name="_59dp">59dp</dimen>
-    <dimen name="_8dp">8dp</dimen>
-    <dimen name="_220dp">220dp</dimen>
-    <dimen name="_5dp">5dp</dimen>
-    <dimen name="_40dp">40dp</dimen>
-    <dimen name="_14dp">14dp</dimen>
-    <dimen name="_4dp">4dp</dimen>
-    <dimen name="_20dp">20dp</dimen>
-    <dimen name="_10dp">10dp</dimen>
-    <dimen name="_80dp">80dp</dimen>
-    <dimen name="_96dp">96dp</dimen>
-    <dimen name="_30dp">30dp</dimen>
-    <dimen name="_60dp">60dp</dimen>
-    <dimen name="_62dp">62dp</dimen>
-    <dimen name="_415dp">415dp</dimen>
-    <dimen name="_170dp">170dp</dimen>
-    <dimen name="_186dp">186dp</dimen>
+    <dimen name="size_16">16dp</dimen>
+    <dimen name="padding_16">16dp</dimen>
+    <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_59">59dp</dimen>
+    <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_220">220dp</dimen>
+    <dimen name="width_220">220dp</dimen>
+    <dimen name="width_96">96dp</dimen>
+    <dimen name="width_80">80dp</dimen>
+
+    <dimen name="margin_5">5dp</dimen>
+    <dimen name="padding_5">5dp</dimen>
+    <dimen name="margin_40">40dp</dimen>
+    <dimen name="size_40">40dp</dimen>
+    <dimen name="margin_14">14dp</dimen>
+    <dimen name="size_14">14dp</dimen>
+    <dimen name="margin_4">4dp</dimen>
+    <dimen name="padding_4">4dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
+    <dimen name="margin_10">10dp</dimen>
+    <dimen name="margin_80">80dp</dimen>
+    <dimen name="margin_96">96dp</dimen>
+    <dimen name="margin_30">30dp</dimen>
+    <dimen name="margin_60">60dp</dimen>
+    <dimen name="margin_62">62dp</dimen>
+    <dimen name="margin_415">415dp</dimen>
+    <dimen name="margin_170">170dp</dimen>
+    <dimen name="margin_186">186dp</dimen>
 </resources>
