--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/bg"
-        tools:context=".MovieDetailsActivity">
 
 
     <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:background="@drawable/bg"
+            tools:context=".MovieDetailsActivity"
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+      <!--  <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -37,7 +36,7 @@
                     app:srcCompat="@drawable/path"
                     android:id="@+id/imageView4" />
 
-            <!--  <TextView
+            &lt;!&ndash;  <TextView
                       android:layout_marginLeft="@dimen/_16dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
@@ -48,7 +47,7 @@
                       android:textColor="@color/_6D6D80"
                       app:layout_constraintTop_toTopOf="parent"
                       android:id="@+id/textView12"
-                      app:layout_constraintStart_toStartOf="parent" />-->
+                      app:layout_constraintStart_toStartOf="parent" />&ndash;&gt;
 
 
             <TextView
@@ -309,6 +308,5 @@
                     app:layout_constraintTop_toBottomOf="@+id/imageView13" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
+-->
     </ScrollView>
-</LinearLayout>
